--- a/NServiceBus.MicrosoftDependencyInjectionAdapter/NServiceBus.MicrosoftDependencyInjectionAdapter.csproj
+++ b/NServiceBus.MicrosoftDependencyInjectionAdapter/NServiceBus.MicrosoftDependencyInjectionAdapter.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="5.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="NServiceBus" Version="7.0.1" />
   </ItemGroup>
